--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.8.1",
     "mongoose": "^7.4.4",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "npm-git-install": "^0.3.0",
     "passport": "^0.6.0",
